Filegen: Fix render performance on firefox

--- a/App/css/style.css
+++ b/App/css/style.css
@@ -518,6 +518,7 @@ blockquote {
     width: 500px;
     height: 144px;
     z-index: 999999;
+    display: none;
     overflow: hidden;
     position: absolute;
     border-top-right-radius: 6px;
